--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.7.4",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
